Fixed major alignment/sizing issues with splash, schedule, and sponsors on mobile

--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -27,7 +27,6 @@
     text-align: center;
   }
   #commingsoonimg {
-    margin-top: 40%;
     width: 90%;
   }
   .day-container img {
