--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -61,19 +61,28 @@ li span {
 }
 /* END */
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 960px) {
   .splash {
     background-image: url(./images/mobilesplash.svg);
   }
+}
+
+@media only screen and (max-width: 480px) {
+  .headercontainer {
+    padding-top: 0;
+    min-height: 100vh;
+  }
   .logo {
     width: 85%;
-    top: 20%;
   }
-  .headercontainer {
-    top: 55%;
-    width: 85%;
+  .subheader {
+    padding: 6%;
+    font-size: 1.5em;
   }
-  .countdown-registration {
-    padding: 0;
+  li {
+    font-size: 1.0em;
+  }
+  li span {
+    font-size: 2.9rem;
   }
 }
